tdf#133052: DOCX import: fix top auto margin of subitems

(nested lists) and other items of lists, when auto
margin is defined by paragraph style, and list items
have got w:numPr.

Follow-up of commit 162d74ae7a53eb1cde738f0a7558f297b8162f7a
(tdf#132807 DOCX import: fix top auto margin in lists).

Change-Id: I4cf470173fa367ac07e15dc901b0e202178c9fc4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94588
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>